--- a/src/reset.css
+++ b/src/reset.css
@@ -44,8 +44,9 @@ ol[class] {
 }
 
 /* A elements that don't have a class get default styles */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 /* Make images easier to work with */
